@@ -109,11 +109,11 @@ if [ -S "$SSH_AUTH_SOCK" ] && [ ! -h "$SSH_AUTH_SOCK" ]; then
 	export SSH_AUTH_SOCK="$BYOBU_CONFIG_DIR/.ssh-agent"
 fi
 
-# Terminfo we will use
-BYOBU_TERM="screen"
+# Fallback terminfo
+[ -z "$BYOBU_DEFAULT_TERM" ] && BYOBU_DEFAULT_TERM="screen"
 
 # Color terminfo to use, if possible
-BYOBU_COLOR_TERM="screen-256color"
+[ -z "$BYOBU_COLOR_TERM" ] && BYOBU_COLOR_TERM="screen-256color"
 
 # Check if our terminfo supports 256 colors
 CAN_SHOW_COLORS=
@@ -137,8 +137,12 @@ case $BYOBU_BACKEND in
 		if [ -n "$CAN_SHOW_COLORS" ] || [ "$COLORTERM" = "gnome-terminal" ] || [ "$TERM" = "xterm" ] || [ "$TERM" = "xterm-256color" ] || [ "$TERM" = "screen" ]; then
 			[ -z "$SCREEN_TERM" ] && SCREEN_TERM="-2"
 		fi
-		if [ -n "$SCREEN_TERM" -a -n "$HAS_COLOR_TERM" ]; then
-			BYOBU_TERM="$BYOBU_COLOR_TERM"
+		if [ -z "$BYOBU_TERM" ]; then
+			if [ -n "$SCREEN_TERM" -a -n "$HAS_COLOR_TERM" ]; then
+				BYOBU_TERM="$BYOBU_COLOR_TERM"
+			else
+				BYOBU_TERM="$BYOBU_DEFAULT_TERM"
+			fi
 		fi
 		BYOBU_PROFILE="-f $BYOBU_PREFIX/share/$PKG/profiles/tmuxrc"
 		# Set default window, unless user has overriden
@@ -174,8 +178,12 @@ case $BYOBU_BACKEND in
 		# Launch shell, unless the user has default windows set to launch
 		uncommented_lines < "$BYOBU_WINDOWS" && DEFAULT_WINDOW= || DEFAULT_WINDOW="${BYOBU_PREFIX}/bin/byobu-shell"
 		# Use 256 colors if possible
-		if [ -n "$CAN_SHOW_COLORS" -a -n "$HAS_COLOR_TERM" ]; then
-			BYOBU_TERM="$BYOBU_COLOR_TERM"
+		if [ -z "$BYOBU_TERM" ]; then
+			if [ -n "$CAN_SHOW_COLORS" -a -n "$HAS_COLOR_TERM" ]; then
+				BYOBU_TERM="$BYOBU_COLOR_TERM"
+			else
+				BYOBU_TERM="$BYOBU_DEFAULT_TERM"
+			fi
 		fi
 		SCREEN_TERM="-T $BYOBU_TERM"
 		# Some users want to maintain separate configurations
