@@ -3,6 +3,8 @@ byobu (5.111) unreleased; urgency=medium
   [ Jeffery To ]
   * usr/bin/byobu.in, usr/share/byobu/profiles/tmux:
     - use screen-256color if possible, for both screen and tmux
+    - allow the user to override our term choices, by setting
+      BYOBU_TERM, BYOBU_DEFAULT_TERM and/or BYOBU_COLOR_TERM
 
  -- Dustin Kirkland <kirkland@ubuntu.com>  Fri, 29 Jul 2016 12:29:07 -0500
 
